# d2fastlauncher

./: D2R_Launcher_Technical_Spec.md  D2R_Launcher_Upgrade_Solution.md  README.md
D2R-Fast-Launcher/: index.html  package-lock.json  package.json
D2R-Fast-Launcher/src/: style.css
D2R-Fast-Launcher/src-tauri/: Cargo.toml  tauri.conf.json
D2R-Fast-Launcher/src-tauri/src/: auto_typer.rs  main.rs  process_killer.rs
D2R-Fast-Launcher/src/components/: AccountCard.vue  AccountModal.vue
D2R-Fast-Launcher/src/store/: account.ts
D2R-Fast-Launcher/src/views/: MainView.vue
