[package]
name = "d2r-fast-launcher"
version = "2.0.0"
description = "A modern fast launcher for Diablo II Resurrected"
authors = ["faliny"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["api-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows = { version = "0.52", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging", "Win32_System_SystemInformation", "Win32_Security", "Win32_System_Memory", "Win32_UI_Input_KeyboardAndMouse"] }
winreg = "0.52"
sysinfo = "0.30"
ntapi = "0.4"
winapi = { version = "0.3", features = ["winnt", "ntstatus"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
